--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
     "mocha": "^10.2.0",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.17",
+    "@types/express-flash": "^0.0.2",
+    "@types/express-session": "^1.17.7"
   }
 }
